# MAVRIC_Systems

./: .clang-format  .gitignore  .pre-commit-config.yaml  Drive_launch.xml  README  README.md  masterDrive_launch.py  masterDrive_launch.xml  pyproject.toml  requirements.txt  servo-test-claw.py  servo_active_control_prototype.py  servo_positional_control.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/ROS Foxy Config/: .devcontainter.json  Dockerfile  devcontainer.json
.devcontainer/ROS Foxy Desktop/: Dockerfile  devcontainer.json  entrypoint.sh  supervisord.conf
.devcontainer/ROS Foxy Dev Config/: Dockerfile  devcontainer.json
.devcontainer/ROS Jazzy Dev Config/: Dockerfile  devcontainer.json
.devcontainer/ROSFoxyDesktop/: Dockerfile  devcontainer.json  start-gui.sh  supervisord.conf
.github/: CODE_FORMATTING.md
.github/workflows/: code-format-check.yml  code-format.yml  enforce-lf.yml  ros2-foxy-launch-validation.yml  validate-devcontainers.yml
Arm_test/: arm_script.py  can_test.py  claw_servo_example.py  pwm_test.py  servo_adafruit.py
Arm_test/adafruit_lib/: Servokit.py
CyTemp/cysar/: CMakeLists.txt  package.xml
CyTemp/cysar/launch/: teleop.launch
CyTemp/cysar/msg/: SteerTrain.msg
CyTemp/cysar/src/: can_control.py  drive_control.py  flipper_control.py  steer_control.py  teleop.py
CyTemp/cysar/src/SparkCANLib/: SparkCAN.py  SparkController.py  Statuses.py
SparkCANLib/: SparkCAN.py
headless_teleop/: ARCHITECTURE.md  CONTROL_LAYOUT.md  OPTIMIZATION_SUMMARY.md  QUICKREF.md  QUICK_REFERENCE.md  README.md  TESTING.md  TROUBLESHOOTING_ACCESS.md  WEB_INTERFACE_SUMMARY.md  WEB_README.md  config.py  initcurses.py  initializer.py  inittextual.py  start_web.sh  test.py  test_controls.py  web_teleop.py
headless_teleop/SparkCANLib/: SparkCAN.py  SparkController.py
headless_teleop/spark_can/: spark_can.py
headless_teleop/static/: script.js  style.css
headless_teleop/templates/: index.html
migrated/launch/: Drive.launch  masterDrive.launch
migrated/src/: Scale_Startups.py  SparkCAN_Drive_Train.py
rasp-test/: CAN_test.py  GPS_test.py  blinka-setup.py  discover.sh  moisture_test_jetson.py  requirements.txt  servo_test.py  servo_test_gpio.py  test-sensor-address.py
rasp_test/: README.md  README.txt  requirements.txt
ros2_ws/src/MAVRIC/: setup.py
ros2_ws/src/MAVRIC/MAVRIC/: SparkCAN_Drive_Train.py
ros2_ws_Foxy/: ARCHITECTURE_CHANGES.md  ARCHITECTURE_COMPARISON.md  CAN_SINGLETON_PLAN.md  CHANGES.md  CONSOLIDATION_COMPLETE.md  DEPENDENCIES_UPDATED.md  HYBRID_STATUS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MOTOR_STATUS_GUIDE.md  PERFORMANCE_ANALYSIS_HELPER_vs_INLINE.md  PERFORMANCE_OPTIMIZATION.md  QUICK_REFERENCE.md  QUICK_START_OPTIMIZATION.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  ROSIDL_TYPESUPPORT_FIX.md  SEPARATE_NODES_PLAN.md  SERVOKIT_SINGLETON_PLAN.md  SERVOKIT_SINGLETON_REFINED.md  STATUS_ARCHITECTURE.md  TELEOP_DELETION_COMPLETE.md  TELEOP_EVALUATION.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  build_optimized.sh  format.sh  launch.sh  motor_status_client_example.py  test_motor_status_service.py  test_performance.py
ros2_ws_Foxy/src/: GPS_Neo-M9N.py
ros2_ws_Foxy/src/MAVRIC/: cMakeLists.txt  package.xml  setup.cfg
ros2_ws_Foxy/src/MAVRIC/MAVRIC/: SparkController.py
ros2_ws_Foxy/src/MAVRIC/msg/: ArmData.msg
ros2_ws_Foxy/src/SparkCan/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws_Foxy/src/SparkCan/SparkCan/: Scale_Startups.py  SparkCAN_Drive_Train.py  tester.py
ros2_ws_Foxy/src/SparkCan/launch/: Drive.launch.xml  Drive_launch.py  Drive_launch.xml  Sensors_launch.py  masterDrive.launch  masterDrive_launch.py  masterDrive_launch.xml
ros2_ws_Foxy/src/drive_system/: package.xml  setup.cfg  setup.py
ros2_ws_Foxy/src/drive_system/drive_system/: arm_control.py  can_composer.py  can_control.py  can_manager.py  drive_control.py  scale_tuning.py  servo_manager.py  steer_control.py  teleop.py
ros2_ws_Foxy/src/launch/: package.xml
ros2_ws_Foxy/src/launch/src/: teleop.launch
ros2_ws_Foxy/src/managers/: package.xml  setup.cfg  setup.py
ros2_ws_Foxy/src/managers/managers/: can_manager.py  servo_manager.py
ros2_ws_Foxy/src/mavric_launch/: CMakeLists.txt  cmakelists.txt  package.xml  setup.py
ros2_ws_Foxy/src/mavric_launch/launch/: teleop.launch.py
ros2_ws_Foxy/src/mavric_launch/resource/: mavric_launch
ros2_ws_Foxy/src/mavric_msg/: CMakeLists.txt  package.xml
ros2_ws_Foxy/src/mavric_msg/msg/: Arm.msg  ArmScales.msg  CANCommand.msg  CANCommandBatch.msg  CANStatus.msg  DriveTrain.msg  ServoCommand.msg  SteerTrain.msg
ros2_ws_Foxy/src/mavric_msg/srv/: GetMotorStatus.srv  GetScales.srv
ros2_ws_Foxy/src/mavric_msg_drive/: CMakeLists.txt  package.xml
ros2_ws_Foxy/src/mavric_utils/: package.xml  setup.py
ros2_ws_Foxy/src/mavric_utils/mavric_utils/SparkCANLib/: SparkCAN.py  SparkController.py  __init__.py
ros2_ws_Foxy/src/mavric_utils/resource/: mavric_utils
ros2_ws_Foxy/src/msg/: CMakeLists.txt  package.xml
ros2_ws_Foxy/src/msg_drive/: CMakeLists.txt  package.xml
ros2_ws_Foxy/src/msg_drive/msg/: ArmData.msg  Drivetrain.msg  ScaleFeedback.msg  Steer.msg  Steertrain.msg
ros2_ws_Foxy/src/msg_sensor/: CMakeLists.txt  package.xml
ros2_ws_Foxy/src/sensors/: package.xml  setup.py
ros2_ws_Foxy/src/sensors/sensors/: GPS_control.py  IMUTest.py
ros2_ws_Foxy/src/spark_can/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws_Foxy/src/spark_can/launch/: Drive_launch.py  drive.launch.py  masterDrive_launch.py  master_drive.launch.py  sensor_launch.launch.py
ros2_ws_Foxy/src/spark_can/msg/: Steertrain.msg
ros2_ws_Foxy/src/spark_can/spark_can/: BNO055_IMU.py  Battery_Voltage.py  GPS_Neo-M9N.py  Scale_Startups.py  SparkCAN.py  SparkCAN_Drive_Train.py  SparkController.py  Statuses.py  __init__.py  scale_startups.py  scale_startus.py  spark_can.py  spark_can_drive_train.py  spark_controller.py  tester.py
ros2_ws_Foxy/src/utils/: package.xml  setup.py
ros2_ws_Foxy/src/utils/utils/: __init__.py  can_publisher.py  command_filter.py  servo_publisher.py
(+9 files in other folders)
