<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensors</name>
  <version>0.0.0</version>
  <description>Package for MAVRIC's sensors</description>
  <maintainer email="ronsecondmail@gmail.com">mavric</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Other MAVRIC Packages -->
  <exec_depend>mavric_msg</exec_depend>

  <!-- ROS2 Packages -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
