<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spark_can</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ebarboza@iastate.edu">Eduardo</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <!-- <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend> -->
  <!-- <buildtool_depend>ament_python</buildtool_depend> -->

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- General dependencies -->
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>msg_drive</depend>

  <!-- Interface generation -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- <build_type>ament_cmake</build_type> -->
    <build_type>ament_python</build_type>
  </export>
</package>